Font Changes, fixed some inconsistent spacing with the font in the notched outline text fields

--- a/client/css/Home.scss
+++ b/client/css/Home.scss
@@ -155,7 +155,7 @@
 }
 
 .scrollBarOuter {
-  background-color: rgba(51, 184, 255, 0.15);
+  background-color: $glass-blue;
   display: flex;
   align-items: center;
   justify-content: center;
